crates/solidity-v2/testing/snapshots/diagnostics_output/structure/free_function_visibility/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[SyntaxError 4126] Error: Free functions cannot have visibility.
   ╭─[input.sol:5:1]
   │
 5 │ function f1() public {}
   │ ───────────┬───────────  
   │            ╰───────────── Error occurred here.
───╯

[SyntaxError 4126] Error: Free functions cannot have visibility.
   ╭─[input.sol:8:1]
   │
 8 │ function f2() internal {}
   │ ────────────┬────────────  
   │             ╰────────────── Error occurred here.
───╯
